[package]
name = "cogno-chain-node"
description = "The cogno-chain solochain node — Aura + GRANDPA, with a custom proposer that seals the observed Cardano block anchor into each header."
version.workspace = true
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
# in-protocol-observation (D4): the node-side Cardano observation InherentDataProvider.
async-trait = "0.1"
log = { workspace = true }
codec = { features = ["std"], workspace = true }
pallet-cardano-observer = { features = ["std"], workspace = true }
# in-protocol-observation (D4): the per-node Cardano db-sync read + reduction now lives in the shared
# `cogno-dbsync` crate (folded out of the former node/src/dbsync.rs + node/src/cardano_observer.rs pure
# half). The node is the WRITER (its inherent) and the cogno-chain-cli reuses the SAME crate read-only —
# both byte-identical. It pulls tokio/tokio-postgres transitively; the node no longer depends on them
# directly. NoTls — cogno_reader is a read-only role on a private-LAN db-sync; TLS is a MAINNET PREREQUISITE.
cogno-dbsync = { workspace = true }
# gen-chainspec (reads operator PUBLIC keys for an operator-keyed genesis) + key insert (reads a session
# secret from an envelope BY FILE PATH). Shared with the CLI signer, so the on-disk format can't drift.
cogno-keyfile = { workspace = true }
# In-node observer-liveness Prometheus metrics — the `cogno_observer_*` gauges registered on the node's
# `config.prometheus_registry()` (so chain-liveness alerts staying green can't mask a stale observer).
substrate-prometheus-endpoint = { default-features = true, workspace = true }
# Benchmark-only, and OPTIONAL on purpose. Both are used solely from `node/src/benchmarking.rs`, which
# is itself `#[cfg(feature = "runtime-benchmarks")]`. Left non-optional they still land in the default
# dependency graph, dragging 150 crates — including 18 strict `GPL-3.0-only` ones (the polkadot-*, xcm
# and tracing-gum trees, pulled in via frame-benchmarking-cli -> cumulus-*) — into a binary this crate
# licenses Apache-2.0. Gating them takes the shipped node to ZERO GPL-3.0-only crates; the `sc-*` stack
# that remains is GPL-3.0-or-later WITH Classpath-exception-2.0, which permits exactly this linking.
frame-benchmarking-cli = { default-features = true, optional = true, workspace = true }
frame-metadata-hash-extension = { default-features = true, workspace = true }
frame-system = { default-features = true, workspace = true }
futures = { features = ["thread-pool"], workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
pallet-microblog = { default-features = true, workspace = true }
pallet-skip-feeless-payment = { default-features = true, optional = true, workspace = true }
pallet-transaction-payment = { default-features = true, workspace = true }
pallet-transaction-payment-rpc = { default-features = true, workspace = true }
sc-basic-authorship = { default-features = true, workspace = true }
sc-cli = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-consensus = { default-features = true, workspace = true }
sc-consensus-aura = { default-features = true, workspace = true }
sc-consensus-grandpa = { default-features = true, workspace = true }
sc-executor = { default-features = true, workspace = true }
# `key insert-file`: open the LocalKeystore + insert the file-derived session secret.
sc-keystore = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true }
sc-offchain = { default-features = true, workspace = true }
sc-service = { default-features = true, workspace = true }
sc-telemetry = { default-features = true, workspace = true }
sc-transaction-pool = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
cogno-chain-runtime = { workspace = true }
sp-api = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-consensus = { default-features = true, workspace = true }
sp-consensus-aura = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-genesis-builder = { default-features = true, workspace = true }
sp-inherents = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-keyring = { default-features = true, workspace = true }
# `key insert-file`: the Keystore trait + KeystorePtr the file-based session-key insert writes through.
sp-keystore = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-timestamp = { default-features = true, workspace = true }
substrate-frame-rpc-system = { default-features = true, workspace = true }

[build-dependencies]
substrate-build-script-utils = { default-features = true, workspace = true }

[features]
default = ["std"]
std = ["cogno-chain-runtime/std"]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"dep:frame-benchmarking-cli",
	"dep:pallet-skip-feeless-payment",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"cogno-chain-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"cogno-chain-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
