[package]
name = "pallet-cogno-gate"
description = "cogno-chain identity gate — the 1:1 Cardano-owner-Address ↔ Substrate-account binding (the anti-Sybil anchor), established by a permissionless on-chain CIP-8 self-proof; the 3-of-5 committee gates only revoke. Gates pallet-microblog posting on is_allowed."
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
# Normal dep: cogno-gate calls into microblog's `on_first_bind` at link, and the two
# cross-pallet traits (IsAllowed / OnIdentityBind) live in microblog (the depended-upon crate)
# so neither pallet forms a Cargo cycle with the other.
pallet-microblog = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
# D1 (on-chain CIP-8 self-proof): `sp_io::crypto::ed25519_verify` + `sp_io::hashing::blake2_256`
# (host functions) for the trustless identity verifier. NOW a runtime dep (was dev-only).
sp-io = { workspace = true, default-features = false }
# blake2b-224 (Cardano key hash) — NOT an sp_io host fn (only blake2_256/_128 are), so use the
# RustCrypto variable-output blake2 (no_std). Pinned to the 0.10.x already in Cargo.lock.
blake2 = { version = "0.10.6", default-features = false }
# sp-core: the `ed25519::{Public, Signature}` types `sp_io::crypto::ed25519_verify` takes. NOW a
# runtime dep (was dev-only) for the D1 verifier.
sp-core = { workspace = true, default-features = false }

[dev-dependencies]
# The integration mock builds a full runtime (System + TalkStake + Microblog + CognoGate) to
# exercise the real link_identity → is_allowed → post flow. talk-stake is microblog's weight
# source; cogno-gate is the top crate, so naming it here is no cycle.
pallet-talk-stake = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-microblog/std",
	"scale-info/std",
	"sp-io/std",
	"blake2/std",
	"sp-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-microblog/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-microblog/try-runtime",
]
