[package]
name = "pallet-governance-fuel"
description = "cogno-chain governance-fuel pallet (index 18) — the sudo-free, committee-administered REGENERATING admin-fee budget. `set_allowance`/`revoke` are AuthorityOrigin-gated (3-of-5 FollowerCommittee); an `on_initialize` hook mints each funded account's native balance back toward its committee-set standing allowance so the fuel that pays the fee-bearing admin extrinsics (Session::set_keys, committee propose/vote/close) never depletes and a drained member auto-recovers (no self-refund deadlock). Fuel is the admin-side analogue of talk-capacity: a non-transferable, governance-granted, regenerating rate-limit — it can never post (the social layer never reads Balances)."
version.workspace = true
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
# Only the mock binds `Currency = Balances`; the pallet itself depends on the `fungible::Mutate`
# abstraction (no `pallet-balances` in normal deps), exactly like the runtime wiring.
pallet-balances = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
