[package]
name = "pallet-microblog"
description = "cogno-chain microblog pallet — plain text posting (M0; identity gate + talk-capacity land in later milestones)."
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
# The spec-120 `MicroblogApi` node-served read API (decl_runtime_apis! at the crate root).
sp-api = { workspace = true }
sp-runtime = { workspace = true }
# Tight coupling: the capacity meter reads per-account weight from talk-stake (ECONOMICS §6.2).
pallet-talk-stake = { workspace = true }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-talk-stake/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-talk-stake/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-talk-stake/try-runtime",
]
