[package]
name = "pallet-profile"
description = "cogno-chain profile pallet — mutable per-account display profile (name/bio/avatar). Identity-gated via the microblog IsAllowed trait (CognoGate); set_profile is fee-bearing (low-frequency, so the tx fee is its own anti-spam — no second capacity extension)."
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
# Reuse the `IsAllowed` identity trait from microblog (the depended-upon crate) — microblog never
# names profile, so profile -> microblog is one-directional (no Cargo cycle), exactly like cogno-gate.
pallet-microblog = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-microblog/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-microblog/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-microblog/try-runtime",
]
