[package]
name = "pallet-talk-stake"
description = "cogno-chain talk-stake pallet — a call-less per-account stake-weight + voting-power ledger, written ONLY by the cardano-observer inherent (the sole weight writer). Feeds the regenerating talk-capacity meter + stake-weighted votes in pallet-microblog."
version.workspace = true
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
proptest = { workspace = true }
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
]
# The pallet is call-less (observer-written) and has no benchmarks; the feature stays so the runtime's
# `pallet-talk-stake/runtime-benchmarks` reference resolves, but it only forwards the frame deps.
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
