[package]
name = "pallet-validator-set"
description = "cogno-chain validator-set pallet (M6) — vendor-forked from gautamdhameja/substrate-validator-set and ported to this SDK (frame v46, #[frame_support::runtime], the newer pallet-session Currency/KeyDeposit/HoldReason API). Holds the MUTABLE Aura+GRANDPA validator set behind pallet-session: add_validator/remove_validator are gated by the AddRemoveOrigin (the M5 3-of-5 FollowerCommittee) and a change is QUEUED then applied at a session boundary (~2 sessions). The im-online auto-removal plumbing (OfflineValidators + ReportOffence) is ported and dormant — NOT wired in v1 (L3 §8.2)."
version = "0.1.0"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-session = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }

[dev-dependencies]
pallet-balances = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-session/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-staking/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-session/try-runtime",
]
